--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,9 @@
     "autoload": {
         "psr-4": {
             "ahmetbarut\\" : "./src"
-        }
+        },
+        "files": [
+            "src/helper/directory.php"
+        ]
     }
 }
