--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "name": "ahmetbarut/file-manager",
+    "license": "GPL-3",
     "autoload": {
         "psr-4": {
             "ahmetbarut\\": "src/"
