--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "ahmetbarut/file-manager",
-    "license": "GPL-3",
+    "license": "GPL-3.0-only",
     "autoload": {
         "psr-4": {
             "ahmetbarut\\": "src/"
